--- a/index.html
+++ b/index.html
@@ -46,35 +46,35 @@ lib.ssMetadata = [
 	}
 }).prototype = p = new cjs.MovieClip();
 // symbols:
-(lib.CachedBmp_16 = function() {
+(lib.CachedBmp_8 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(0);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_15 = function() {
+(lib.CachedBmp_7 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(1);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_14 = function() {
+(lib.CachedBmp_6 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(2);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_13 = function() {
+(lib.CachedBmp_5 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(3);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_12 = function() {
+(lib.CachedBmp_4 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(4);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_11 = function() {
+(lib.CachedBmp_3 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(5);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_10 = function() {
+(lib.CachedBmp_2 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(6);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_9 = function() {
+(lib.CachedBmp_1 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(7);
 }).prototype = p = new cjs.Sprite();
@@ -111,7 +111,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_16();
+	this.instance = new lib.CachedBmp_8();
 	this.instance.setTransform(-26.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -167,7 +167,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_15();
+	this.instance = new lib.CachedBmp_7();
 	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -223,7 +223,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_14();
+	this.instance = new lib.CachedBmp_6();
 	this.instance.setTransform(-26.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -279,7 +279,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_13();
+	this.instance = new lib.CachedBmp_5();
 	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -335,7 +335,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_12();
+	this.instance = new lib.CachedBmp_4();
 	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -391,7 +391,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_11();
+	this.instance = new lib.CachedBmp_3();
 	this.instance.setTransform(-26.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -447,7 +447,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_10();
+	this.instance = new lib.CachedBmp_2();
 	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -516,31 +516,31 @@ if (reversed == null) { reversed = false; }
 		this.stop();
 		this.weicha.addEventListener("click", GoToweicha);
 		function GoToweicha() {
-			window.open("https://chenyue03.github.io/Learning-Platform/单链表尾插.html", "_blank");
+			window.open("https://ke0486.github.io/Platform1/单链表尾插.html", "_blank");
 		}
 		this.charu.addEventListener("click", GoTocharu);
 		function GoTocharu() {
-			window.open("https://chenyue03.github.io/Learning-Platform/单链表的插入.html", "_blank");
+			window.open("https://ke0486.github.io/Platform1/单链表的插入.html", "_blank");
 		}
 		this.shanchu.addEventListener("click", GoToshanchu);
 		function GoToshanchu() {
-			window.open("https://chenyue03.github.io/Learning-Platform/单链表删除.html", "_blank");
+			window.open("https://ke0486.github.io/Platform1/单链表删除.html", "_blank");
 		}
 		this.toucha.addEventListener("click", GoTotoucha);
 		function GoTotoucha() {
-			window.open("https://chenyue03.github.io/Learning-Platform/链表头插法.html", "_blank");
+			window.open("https://ke0486.github.io/Platform1/链表头插法.html", "_blank");
 		}
 		this.charu2.addEventListener("click", GoTocharu2);
 		function GoTocharu2() {
-			window.open("https://chenyue03.github.io/Learning-Platform/双向链表插入.html", "_blank");
+			window.open("https://ke0486.github.io/Platform1/双向链表插入.html", "_blank");
 		}
 		this.shanchu2.addEventListener("click", GoToshanchu2);
 		function GoToshanchu2() {
-			window.open("https://chenyue03.github.io/Learning-Platform/双向链表删除.html", "_blank");
+			window.open("https://ke0486.github.io/Platform1/双向链表删除.html", "_blank");
 		}
 		this.chazhao.addEventListener("click", GoTochazhao);
 		function GoTochazhao() {
-			window.open("https://chenyue03.github.io/Learning-Platform/单链表的查找.html", "_blank");
+			window.open("https://ke0486.github.io/Platform1/单链表的查找.html", "_blank");
 		}
 	}
 	// actions tween:
@@ -576,7 +576,7 @@ if (reversed == null) { reversed = false; }
 	this.weicha.name = "weicha";
 	this.weicha.setTransform(207.35,269.15,3.1505,3.1505,0,0,0,0.2,0);
 	new cjs.ButtonHelper(this.weicha, 0, 1, 2, false, new lib.tubeyellow(), 3);
-	this.instance_1 = new lib.CachedBmp_9();
+	this.instance_1 = new lib.CachedBmp_1();
 	this.instance_1.setTransform(365.5,57.2,0.5,0.5);
 	this.timeline.addTween(cjs.Tween.get({}).to({state:[{t:this.instance_1},{t:this.weicha},{t:this.toucha},{t:this.chazhao},{t:this.shanchu2},{t:this.charu2},{t:this.charu},{t:this.shanchu},{t:this.instance}]}).wait(1));
 	this.shanchu.addEventListener("tick", AdobeAn.handleFilterCache);
