--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 var p; // shortcut to reference prototypes
 var lib={};var ss={};var img={};
 lib.ssMetadata = [
-		{name:"index_atlas_1", frames: [[0,89,329,92],[1100,0,379,84],[331,89,329,92],[1481,0,379,84],[1100,86,379,84],[662,89,329,92],[1481,86,379,84],[0,0,1098,87],[993,172,290,79]]}
+		{name:"index_atlas_1", frames: [[1772,0,228,92],[573,89,228,92],[1491,0,279,92],[803,89,228,92],[1160,0,329,92],[0,89,279,92],[0,0,1158,87],[281,89,290,79]]}
 ];
 (lib.AnMovieClip = function(){
 	this.actionFrames = [];
@@ -46,41 +46,37 @@ lib.ssMetadata = [
 	}
 }).prototype = p = new cjs.MovieClip();
 // symbols:
-(lib.CachedBmp_8 = function() {
+(lib.CachedBmp_97 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(0);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_7 = function() {
+(lib.CachedBmp_96 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(1);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_6 = function() {
+(lib.CachedBmp_95 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(2);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_5 = function() {
+(lib.CachedBmp_94 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(3);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_4 = function() {
+(lib.CachedBmp_93 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(4);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_3 = function() {
+(lib.CachedBmp_92 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(5);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_2 = function() {
+(lib.CachedBmp_91 = function() {
 	this.initialize(ss["index_atlas_1"]);
 	this.gotoAndStop(6);
 }).prototype = p = new cjs.Sprite();
-(lib.CachedBmp_1 = function() {
-	this.initialize(ss["index_atlas_1"]);
-	this.gotoAndStop(7);
-}).prototype = p = new cjs.Sprite();
 (lib.校徽 = function() {
 	this.initialize(ss["index_atlas_1"]);
-	this.gotoAndStop(8);
+	this.gotoAndStop(7);
 }).prototype = p = new cjs.Sprite();
 (lib.tubeglow = function(mode,startPosition,loop,reversed) {
 if (loop == null) { loop = true; }
@@ -111,8 +107,8 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_8();
-	this.instance.setTransform(-26.05,-7,0.1587,0.1587);
+	this.instance = new lib.CachedBmp_97();
+	this.instance.setTransform(-18.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
 	this.shape = new cjs.Shape();
@@ -167,8 +163,8 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_7();
-	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
+	this.instance = new lib.CachedBmp_96();
+	this.instance.setTransform(-18.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
 	this.shape = new cjs.Shape();
@@ -223,8 +219,8 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_6();
-	this.instance.setTransform(-26.05,-7,0.1587,0.1587);
+	this.instance = new lib.CachedBmp_95();
+	this.instance.setTransform(-22.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
 	this.shape = new cjs.Shape();
@@ -279,8 +275,8 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_5();
-	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
+	this.instance = new lib.CachedBmp_94();
+	this.instance.setTransform(-18.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
 	this.shape = new cjs.Shape();
@@ -335,63 +331,7 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_4();
-	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
-	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
-	// center
-	this.shape = new cjs.Shape();
-	this.shape.graphics.lf(["#FEE170","#FFF4CC"],[0,1],8.7,8,3.1,-7.6).s().p("AkFBKQgRgHgNgKQgNgMgIgOQgHgPAAgQQAAgPAHgPQAIgPANgLQANgLARgGQARgGATAAIHCAAQATAAASAGQARAGANALQANALAHAPQAIAPAAAPQAAAQgIAPQgHAOgNAMQgNAKgRAHQgSAGgTAAInCAAIAAAAQgTAAgRgGg");
-	this.shape_1 = new cjs.Shape();
-	this.shape_1.graphics.f("#FEE892").s().p("AkFBKQgRgHgNgKQgNgMgIgOQgHgPAAgQQAAgPAHgPQAIgPANgLQANgLARgGQARgGATAAIHCAAQATAAASAGQARAGANALQANALAHAPQAIAPAAAPQAAAQgIAPQgHAOgNAMQgNAKgRAHQgSAGgTAAInCAAIAAAAQgTAAgRgGg");
-	this.shape_2 = new cjs.Shape();
-	this.shape_2.graphics.lf(["#FED945","#FEEEB4"],[0,1],8.7,8,3.1,-7.6).s().p("AkFBKQgRgHgNgKQgNgMgIgOQgHgPAAgQQAAgPAHgPQAIgPANgLQANgLARgGQARgGATAAIHCAAQATAAASAGQARAGANALQANALAHAPQAIAPAAAPQAAAQgIAPQgHAOgNAMQgNAKgRAHQgSAGgTAAInCAAIAAAAQgTAAgRgGg");
-	this.timeline.addTween(cjs.Tween.get({}).to({state:[{t:this.shape}]}).to({state:[{t:this.shape_1}]},1).to({state:[{t:this.shape_2}]},1).to({state:[]},1).wait(1));
-	// center border
-	this.shape_3 = new cjs.Shape();
-	this.shape_3.graphics.f("#FDCE13").s().p("AjnBaQgUAAgTgHQgRgHgOgMQgNgNgHgQQgIgRAAgSQAAgSAIgQQAHgQANgNQAOgMARgHQATgHAUAAIHPAAQAUAAASAHQARAHAOAMQANANAIAQQAHAQABASQAAASgIARQgIAQgNANQgOAMgRAHQgSAGgUABg");
-	this.shape_4 = new cjs.Shape();
-	this.shape_4.graphics.f("#E3B602").s().p("AjnBaQgUAAgTgHQgRgHgOgMQgNgNgHgQQgIgRAAgSQAAgSAIgQQAHgQANgNQAOgMARgHQATgHAUAAIHPAAQAUAAASAHQARAHAOAMQANANAIAQQAHAQABASQAAASgIARQgIAQgNANQgOAMgRAHQgSAGgUABg");
-	this.timeline.addTween(cjs.Tween.get({}).to({state:[{t:this.shape_3}]}).to({state:[{t:this.shape_4}]},2).to({state:[]},1).wait(1));
-	// center glow
-	this.instance_1 = new lib.tubeglow();
-	this.instance_1.setTransform(0,0,1.0313,1.125);
-	this.instance_1.shadow = new cjs.Shadow("#FFFFFF",0,0,14);
-	this.instance_1._off = true;
-	var instance_1Filter_1 = new cjs.ColorFilter(1,1,1,1,0,0,0,0);
-	this.instance_1.filters = [instance_1Filter_1];
-	this.instance_1.cache(-34,-10,68,20);
-	this.timeline.addTween(cjs.Tween.get(this.instance_1).wait(1).to({_off:false},0).to({_off:true},1).wait(2));
-	this.timeline.addTween(cjs.Tween.get(instance_1Filter_1).wait(1).to(new cjs.ColorFilter(0,0,0,1,255,255,255,0), 0).wait(2));
-	// outer
-	this.shape_5 = new cjs.Shape();
-	this.shape_5.graphics.lf(["#FEDB4E","#FFF2C4"],[0,1],-12.6,-10,15.4,10.9).s().p("AkZBlQgUgIgQgQQgPgPgIgUQgJgUAAgWQAAgVAJgVQAIgUAPgPQAQgPAUgJQAVgIAXAAIHbAAQAXAAAVAIQATAJAQAPQAQAPAIAUQAJAVAAAVQAAAWgJAUQgIAUgQAPQgQAQgTAIQgVAJgXAAInbAAIAAAAQgXAAgVgJg");
-	this.shape_6 = new cjs.Shape();
-	this.shape_6.graphics.f("#FFF4CC").s().p("AkZBlQgUgIgQgQQgPgPgIgUQgJgUAAgWQAAgVAJgVQAIgUAPgPQAQgPAUgJQAVgIAXAAIHbAAQAXAAAVAIQATAJAQAPQAQAPAIAUQAJAVAAAVQAAAWgJAUQgIAUgQAPQgQAQgTAIQgVAJgXAAInbAAIAAAAQgXAAgVgJg");
-	this.shape_7 = new cjs.Shape();
-	this.shape_7.graphics.f("#FDD535").s().p("AkZBlQgUgIgQgQQgPgPgIgUQgJgUAAgWQAAgVAJgVQAIgUAPgPQAQgPAUgJQAVgIAXAAIHbAAQAXAAAVAIQATAJAQAPQAQAPAIAUQAJAVAAAVQAAAWgJAUQgIAUgQAPQgQAQgTAIQgVAJgXAAInbAAIAAAAQgXAAgVgJg");
-	this.timeline.addTween(cjs.Tween.get({}).to({state:[{t:this.shape_5}]}).to({state:[{t:this.shape_6}]},1).to({state:[{t:this.shape_7}]},1).to({state:[]},1).wait(1));
-	// outer border
-	this.shape_8 = new cjs.Shape();
-	this.shape_8.graphics.f("#E3B602").s().p("AkhBuQgVgJgQgQQgPgRgJgWQgJgWAAgYQAAgYAJgWQAJgVAPgRQAQgRAVgJQAVgJAYAAIHpAAQAXAAAWAJQAUAJAQARQAQARAIAVQAKAWAAAYQAAAYgKAWQgIAWgQARQgQAQgUAJQgWAKgXAAInpAAIAAAAQgYAAgVgKg");
-	this.timeline.addTween(cjs.Tween.get(this.shape_8).wait(4));
-	this.filterCacheList = [];
-	this.filterCacheList.push({instance: this.instance_1, startFrame:1, endFrame:1, x:-34, y:-10, w:68, h:20});
-	this.filterCacheList.push({instance: this.instance_1, startFrame:0, endFrame:0, x:-34, y:-10, w:68, h:20});
-	this._renderFirstFrame();
-}).prototype = p = new cjs.MovieClip();
-p.nominalBounds = new cjs.Rectangle(-48,-24,100,52);
-(lib.归并排序 = function(mode,startPosition,loop,reversed) {
-if (loop == null) { loop = true; }
-if (reversed == null) { reversed = false; }
-	var props = new Object();
-	props.mode = mode;
-	props.startPosition = startPosition;
-	props.labels = {};
-	props.loop = loop;
-	props.reversed = reversed;
-	cjs.MovieClip.apply(this,[props]);
-	// text
-	this.instance = new lib.CachedBmp_3();
+	this.instance = new lib.CachedBmp_93();
 	this.instance.setTransform(-26.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
@@ -447,8 +387,8 @@ if (reversed == null) { reversed = false; }
 	props.reversed = reversed;
 	cjs.MovieClip.apply(this,[props]);
 	// text
-	this.instance = new lib.CachedBmp_2();
-	this.instance.setTransform(-30.05,-7,0.1587,0.1587);
+	this.instance = new lib.CachedBmp_92();
+	this.instance.setTransform(-22.05,-7,0.1587,0.1587);
 	this.timeline.addTween(cjs.Tween.get(this.instance).to({_off:true},3).wait(1));
 	// center
 	this.shape = new cjs.Shape();
@@ -514,33 +454,29 @@ if (reversed == null) { reversed = false; }
 			this.isSingleFrame = true;
 		}
 		this.stop();
-		this.weicha.addEventListener("click", GoToweicha);
-		function GoToweicha() {
-			window.open("https://ke0486.github.io/Platform1/单链表尾插.html", "_blank");
+		this.xunhuan.addEventListener("click", GoToxunhuan);
+		function GoToxunhuan() {
+			window.open("https://ke0486.github.io/Platform2/循环队列八元素版.html", "_blank");
 		}
-		this.charu.addEventListener("click", GoTocharu);
-		function GoTocharu() {
-			window.open("https://ke0486.github.io/Platform1/单链表的插入.html", "_blank");
+		this.gongxiang.addEventListener("click", GoTogongxiang);
+		function GoTogongxiang() {
+			window.open("https://ke0486.github.io/Platform2/共享空间.html", "_blank");
 		}
-		this.shanchu.addEventListener("click", GoToshanchu);
-		function GoToshanchu() {
-			window.open("https://ke0486.github.io/Platform1/单链表删除.html", "_blank");
+		this.ranse.addEventListener("click", GoToranse);
+		function GoToranse() {
+			window.open("https://ke0486.github.io/Platform2/地图染色.html", "_blank");
 		}
-		this.toucha.addEventListener("click", GoTotoucha);
-		function GoTotoucha() {
-			window.open("https://ke0486.github.io/Platform1/链表头插法.html", "_blank");
+		this.lian.addEventListener("click", GoTolian);
+		function GoTolian() {
+			window.open("https://ke0486.github.io/Platform2/链队列.html", "_blank");
 		}
-		this.charu2.addEventListener("click", GoTocharu2);
-		function GoTocharu2() {
-			window.open("https://ke0486.github.io/Platform1/双向链表插入.html", "_blank");
+		this.huafen.addEventListener("click", GoTohuafen);
+		function GoTohuafen() {
+			window.open("https://ke0486.github.io/Platform2/子集划分.html", "_blank");
 		}
-		this.shanchu2.addEventListener("click", GoToshanchu2);
-		function GoToshanchu2() {
-			window.open("https://ke0486.github.io/Platform1/双向链表删除.html", "_blank");
-		}
-		this.chazhao.addEventListener("click", GoTochazhao);
-		function GoTochazhao() {
-			window.open("https://ke0486.github.io/Platform1/单链表的查找.html", "_blank");
+		this.qiuzhi.addEventListener("click", GoToqiuzhi);
+		function GoToqiuzhi() {
+			window.open("https://ke0486.github.io/Platform2/表达式求值.html", "_blank");
 		}
 	}
 	// actions tween:
@@ -548,47 +484,42 @@ if (reversed == null) { reversed = false; }
 	// 按钮
 	this.instance = new lib.校徽();
 	this.instance.setTransform(972,623);
-	this.shanchu = new lib.归并排序();
-	this.shanchu.name = "shanchu";
-	this.shanchu.setTransform(955.9,447.5,3.1505,3.1494);
-	new cjs.ButtonHelper(this.shanchu, 0, 1, 2, false, new lib.归并排序(), 3);
-	this.charu = new lib.快速();
-	this.charu.name = "charu";
-	this.charu.setTransform(631.5,447.5,3.1505,3.1494);
-	new cjs.ButtonHelper(this.charu, 0, 1, 2, false, new lib.快速(), 3);
-	this.charu2 = new lib.阶乘();
-	this.charu2.name = "charu2";
-	this.charu2.setTransform(801.1,269.15,3.1505,3.1494);
-	new cjs.ButtonHelper(this.charu2, 0, 1, 2, false, new lib.阶乘(), 3);
-	this.shanchu2 = new lib.图深度搜索();
-	this.shanchu2.name = "shanchu2";
-	this.shanchu2.setTransform(1096.6,269.15,3.1505,3.1494);
-	new cjs.ButtonHelper(this.shanchu2, 0, 1, 2, false, new lib.图深度搜索(), 3);
-	this.chazhao = new lib.二叉树先序();
-	this.chazhao.name = "chazhao";
-	this.chazhao.setTransform(321,455.05,3.1505,3.1494);
-	new cjs.ButtonHelper(this.chazhao, 0, 1, 2, false, new lib.二叉树先序(), 3);
-	this.toucha = new lib.二分();
-	this.toucha.name = "toucha";
-	this.toucha.setTransform(489.75,269.15,3.1505,3.1494);
-	new cjs.ButtonHelper(this.toucha, 0, 1, 2, false, new lib.二分(), 3);
-	this.weicha = new lib.tubeyellow();
-	this.weicha.name = "weicha";
-	this.weicha.setTransform(207.35,269.15,3.1505,3.1505,0,0,0,0.2,0);
-	new cjs.ButtonHelper(this.weicha, 0, 1, 2, false, new lib.tubeyellow(), 3);
-	this.instance_1 = new lib.CachedBmp_1();
-	this.instance_1.setTransform(365.5,57.2,0.5,0.5);
-	this.timeline.addTween(cjs.Tween.get({}).to({state:[{t:this.instance_1},{t:this.weicha},{t:this.toucha},{t:this.chazhao},{t:this.shanchu2},{t:this.charu2},{t:this.charu},{t:this.shanchu},{t:this.instance}]}).wait(1));
-	this.shanchu.addEventListener("tick", AdobeAn.handleFilterCache);
-	this.charu.addEventListener("tick", AdobeAn.handleFilterCache);
-	this.charu2.addEventListener("tick", AdobeAn.handleFilterCache);
-	this.shanchu2.addEventListener("tick", AdobeAn.handleFilterCache);
-	this.chazhao.addEventListener("tick", AdobeAn.handleFilterCache);
-	this.toucha.addEventListener("tick", AdobeAn.handleFilterCache);
-	this.weicha.addEventListener("tick", AdobeAn.handleFilterCache);
+	this.huafen = new lib.快速();
+	this.huafen.name = "huafen";
+	this.huafen.setTransform(917.6,452.05,3.1505,3.1494);
+	new cjs.ButtonHelper(this.huafen, 0, 1, 2, false, new lib.快速(), 3);
+	this.qiuzhi = new lib.阶乘();
+	this.qiuzhi.name = "qiuzhi";
+	this.qiuzhi.setTransform(917.6,277,3.1505,3.1494);
+	new cjs.ButtonHelper(this.qiuzhi, 0, 1, 2, false, new lib.阶乘(), 3);
+	this.xunhuan = new lib.图深度搜索();
+	this.xunhuan.name = "xunhuan";
+	this.xunhuan.setTransform(347.75,452.05,3.1505,3.1494);
+	new cjs.ButtonHelper(this.xunhuan, 0, 1, 2, false, new lib.图深度搜索(), 3);
+	this.lian = new lib.二叉树先序();
+	this.lian.name = "lian";
+	this.lian.setTransform(633.65,451.95,3.1505,3.1494);
+	new cjs.ButtonHelper(this.lian, 0, 1, 2, false, new lib.二叉树先序(), 3);
+	this.ranse = new lib.二分();
+	this.ranse.name = "ranse";
+	this.ranse.setTransform(633.65,277,3.1505,3.1494);
+	new cjs.ButtonHelper(this.ranse, 0, 1, 2, false, new lib.二分(), 3);
+	this.gongxiang = new lib.tubeyellow();
+	this.gongxiang.name = "gongxiang";
+	this.gongxiang.setTransform(348.4,277,3.1505,3.1505,0,0,0,0.2,0);
+	new cjs.ButtonHelper(this.gongxiang, 0, 1, 2, false, new lib.tubeyellow(), 3);
+	this.instance_1 = new lib.CachedBmp_91();
+	this.instance_1.setTransform(350.5,57.2,0.5,0.5);
+	this.timeline.addTween(cjs.Tween.get({}).to({state:[{t:this.instance_1},{t:this.gongxiang},{t:this.ranse},{t:this.lian},{t:this.xunhuan},{t:this.qiuzhi},{t:this.huafen},{t:this.instance}]}).wait(1));
+	this.huafen.addEventListener("tick", AdobeAn.handleFilterCache);
+	this.qiuzhi.addEventListener("tick", AdobeAn.handleFilterCache);
+	this.xunhuan.addEventListener("tick", AdobeAn.handleFilterCache);
+	this.lian.addEventListener("tick", AdobeAn.handleFilterCache);
+	this.ranse.addEventListener("tick", AdobeAn.handleFilterCache);
+	this.gongxiang.addEventListener("tick", AdobeAn.handleFilterCache);
 	this._renderFirstFrame();
 }).prototype = p = new lib.AnMovieClip();
-p.nominalBounds = new cjs.Rectangle(727.8,417.2,534.2,284.8);
+p.nominalBounds = new cjs.Rectangle(868.8,417.2,393.20000000000005,284.8);
 // library properties:
 lib.properties = {
 	id: 'CA6CDCCDE511024D98FDA793008377FF',
